--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -248,3 +248,19 @@ footer {
   bottom: 5px;
   right: 5px;
 }
+.submitbtn {
+    margin-top: 30px;
+    margin-top:30px;
+    border: 1px solid #e8e5e5;
+    border-radius: 5px;
+    background-color:white;
+}
+.submitbtn.hvrr:hover {
+    background-color: #e8e5e5;
+}
+@media(min-width:650px) {
+
+.mtp.titletxt {
+    font-size: 90px;
+}
+}
